comms: all about carbon additions

--- a/src/pages/all-about-carbon/what-is-carbon.mdx
+++ b/src/pages/all-about-carbon/what-is-carbon.mdx
@@ -15,31 +15,41 @@ community of contributors.
 
 </PageDescription>
 
-## Welcome
+<AnchorLinks>
 
-As IBM's official design system, Carbon serves a wide range of designers and
-developers building digital products and experiences.
+<AnchorLink>Overview</AnchorLink>
+<AnchorLink>How Carbon works</AnchorLink>
+<AnchorLink>Carbon compliance at IBM</AnchorLink>
+<AnchorLink>Contact us</AnchorLink>
 
-Carbon is funded and built by IBM. Although that means we build for the
-company's business needs, it also means we have a brilliant team of engineers
-and designers working full time to make Carbon better. It is maintained by a
-core team of designers, developers, and writers based in the Austin, Texas IBM
-Design Studio.
+</AnchorLinks>
 
-The goals of the design system include improving UI consistency and quality,
-making the design and development process more efficient and focused,
-establishing a shared vocabulary between designer and developer, and providing
-clear, discoverable guidance around design and development best practices.
+## Overview
 
-The design system is built [React](/developing/frameworks/react) first. We also
-support core parts of the system in
-[vanilla JS](/developing/frameworks/vanilla),
-[Angular](/developing/frameworks/angular), [Vue](/developing/frameworks/vue),
-and [Svelte](/developing/frameworks/svelte). If you’re using a different
-framework, you can still build components by following our guidelines for
-[other frameworks](/developing/frameworks/other-frameworks).
+A design system is a collection of pre-built, reusable assets—components,
+patterns, guidance, and code—that allows its users to build consistent digital
+experiences faster.
 
-## Guiding principles
+By using the pre-built and universal assets of Carbon, the time teams spend
+designing and building is minimized. Instead of building and re-building basic
+elements, they can spend that time customizing their products to address
+specific client use cases.
+
+### Carbon is open source
+
+Carbon is funded and built by IBM, which means we build for the company’s
+business needs, but we’ve made it open source for anyone to use and contribute
+back to.
+
+While being primarily open source, Carbon also serves various parts of the IBM
+business that follow an inner source model.
+
+## How Carbon works
+
+The Carbon team is committed to helping members of the community be successful
+in adoption and their use of Carbon assets.
+
+### Our guiding principles
 
 **Carbon is open.** The design system is a distributed effort, guided by the
 principles of the
@@ -59,3 +69,68 @@ desires, Carbon is laser-focused on real people.
 **Carbon builds consistency.** Based on the IBM Design Language, every element
 and component of Carbon was designed from the ground up to work elegantly
 together to ensure consistent, cohesive user experiences.
+
+### We maintain assets
+
+**Carbon maintains design kits containing Carbon components.** We offer and
+maintain design kits in [Sketch](/designing/kits/sketch) and
+[Adobe XD](/designing/kits/adobe-xd). We also have an
+[Axure](/designing/kits/axure) kit, maintained by the community.
+
+**Carbon supports multiple code implementations.** These reflect the
+production-level design libraries. The frameworks are listed below with their
+primary maintainers:
+
+- [React](https://github.com/carbon-design-system/carbon): Carbon team
+- [CSS/Vanilla](https://github.com/carbon-design-system/carbon): Carbon team
+- [Angular](https://angular.carbondesignsystem.com/): Community maintained
+- [Vue](https://github.com/carbon-design-system/carbon-components-vue):
+  Community maintained
+- [Svelte](https://github.com/ibm/carbon-components-svelte): Community
+  maintained
+
+If you’re using a different framework, you can still build components by
+following our guidelines for
+[other frameworks](/developing/frameworks/other-frameworks).
+
+**Design patterns are harvested from products built with Carbon.** These become
+part of the design system. Teams can use these well-defined patterns in their
+work and contribute patterns back to the system.
+
+### We support adoption
+
+**We conduct training classes, run meetups, and offer certifications.** We offer
+tutorials in Angular, React, and Vue. We run [meetups](/whats-happening/meetups)
+and design reviews on a regular basis. We're also available to teach at
+conferences, bootcamp labs, and wherever else we’re needed.
+
+**We engage the community.** We strive to be one of the world’s best design
+systems and we’re
+always [open to feedback](https://github.com/carbon-design-system/carbon-website/issues/new?assignees=&labels=feedback&template=feedback.md&title=).
+We communicate with you about Carbon’s state and roadmap through GitHub support,
+blog posts, and Twitter.
+
+**Contributed components and patterns include a list of maintainers.** The
+Carbon team triages and supports maintenance requests that do not have a
+maintainer.
+
+**We provide support for users of the design system.** The Carbon team engages
+with users primarily through GitHub. A member of the Carbon team responds to all
+issues and pull requests.
+
+## Carbon compliance at IBM
+
+Carbon compliance by the IBM community is critically important to the IBM brand.
+Carbon is the digital expression of the IBM brand and the chassis upon which all
+products and digital experiences are built. It is the foundation for every
+digital experience people have throughout their relationship with IBM.
+
+Making delightful user experiences rooted in human-centered design, high-quality
+design standards, and the IBM brand ensures we deliver consistency and
+excellence to our users, and build a brand that people love across the entire
+product line.
+
+## Contact us
+
+Have questions? Found a bug? Learn where to go and what to do by visiting
+the [Contact us page](https://carbondesignsystem.com/help/contact-us).
