--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -121,3 +121,9 @@ your success.
 
 If there’s something in particular you’re interested in, we’d love to
 [hear from you](https://github.com/carbon-design-system/carbon-website/issues/new/choose).
+
+### Learn about the benefits
+
+Learn more about the
+[benefits of using Carbon](/all-about-carbon/who-uses-carbon/) as a designer,
+and how Carbon benefits all members of a product team.
