--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -113,3 +113,9 @@ You can find out about Carbon's latest changes and future plans on the
 [Releases](/whats-happening/releases) page.
 
 If you have questions, here are all the ways to [contact us](/help/contact-us).
+
+### Learn about the benefits
+
+Learn more about the
+[benefits of using Carbon](/all-about-carbon/who-uses-carbon/) as a developer,
+and how Carbon benefits all members of a product team.
