--- a/src/pages/all-about-carbon/who-uses-carbon.mdx
+++ b/src/pages/all-about-carbon/who-uses-carbon.mdx
@@ -64,29 +64,24 @@ Here are some ways designers can begin engaging with Carbon.
   [design principles](https://www.ibm.com/design/language/).
 
 - Familiarize yourself with usage and style guidance for all of Carbon's
-  [components](https://www.carbondesignsystem.com/components/overview/) and
-  [patterns](https://www.carbondesignsystem.com/patterns/overview/).
+  [components](/components/overview/) and [patterns](/patterns/overview/).
 
-- Check out
-  [design tutorials](https://www.carbondesignsystem.com/designing/tutorials/) to
-  learn more about some of the foundational pieces of the design system.
+- Check out [design tutorials](/designing/tutorials/) to learn more about some
+  of the foundational pieces of the design system.
 
 #### Get the tools
 
-- Visit
-  [Designing > Getting Started](https://www.carbondesignsystem.com/designing/get-started/)
-  on the Carbon website and install the design kits.
+- Visit [Designing > Getting Started](/designing/get-started/) on the Carbon
+  website and install the design kits.
 
-- Visit the
-  [Other Resources](https://www.carbondesignsystem.com/designing/design-resources/)
-  page on the Carbon website to find other useful tools and kit extensions like
-  the Mobile Sketch kit and the Master Data Visualization file.
+- Visit the [Other Resources](/designing/design-resources/) page on the Carbon
+  website to find other useful tools and kit extensions like the Mobile Sketch
+  kit and the Master Data Visualization file.
 
 #### Connect with the team
 
-- Find [meetups](https://www.carbondesignsystem.com/whats-happening/meetups/)
-  for leveling up your skills, connecting with your peers, and getting reviews
-  on work in progress.
+- Find [meetups](/whats-happening/meetups/) for leveling up your skills,
+  connecting with your peers, and getting reviews on work in progress.
 
 - If you're confused or if you've spotted an inconsistency, reach out on our IBM
   Slack channels. At this time, the Slack channels are for IBMers only.
@@ -94,28 +89,24 @@ Here are some ways designers can begin engaging with Carbon.
   - [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
   - [#carbon-components](https://ibm-studios.slack.com/archives/C046Y0YUD)
 
-- Make a
-  [Github issue](https://www.carbondesignsystem.com/contributing/bugs-and-requests/)
-  when you find a bug or want to request a feature.
+- Make a [Github issue](/contributing/bugs-and-requests/) when you find a bug or
+  want to request a feature.
 
 #### Keep up with the latest
 
 - Stay up to date with Carbon's
-  [roadmap and releases](https://www.carbondesignsystem.com/whats-happening/releases/).
+  [roadmap and releases](/whats-happening/releases/).
 
-- Keep your eye on the
-  [Work in progress](https://www.carbondesignsystem.com/whats-happening/work-in-progress/)
+- Keep your eye on the [Work in progress](/whats-happening/work-in-progress/)
   section for new resources that are currently being worked on.
 
 #### Contribute back to Carbon
 
-- [Contribute](https://www.carbondesignsystem.com/contributing/overview/)
-  component and/or pattern enhancements, or create new assets, stewarded by the
-  Carbon team.
+- [Contribute](/contributing/overview/) component and/or pattern enhancements,
+  or create new assets, stewarded by the Carbon team.
 
-- Author usage documentation for
-  [patterns](https://www.carbondesignsystem.com/contributing/pattern/) and
-  [components](https://www.carbondesignsystem.com/contributing/component/).
+- Author usage documentation for [patterns](/contributing/pattern/) and
+  [components](/contributing/component/).
 
 - Create tooling, especially as related to design kits in various frameworks.
 
@@ -147,33 +138,28 @@ Here are some ways developers can begin engaging with Carbon.
 #### Learn the system
 
 - Familiarize yourself with the
-  [Carbon foundational elements](https://www.carbondesignsystem.com/guidelines/2x-grid/overview/),
-  their usage documentation and the system's
+  [Carbon foundational elements](/guidelines/2x-grid/overview/), the usage
+  documentation, and the system's
   [design principles](https://www.ibm.com/design/language/).
 
 - Check out a tutorial in your framework of choice
-  ([React](https://www.carbondesignsystem.com/developing/react-tutorial/overview/),
-  [Angular](https://www.carbondesignsystem.com/developing/angular-tutorial/overview/)
-  or
-  [Vue](https://www.carbondesignsystem.com/developing/vue-tutorial/overview/))
-  and get your Developer Essentials badge.
+  ([React](/developing/react-tutorial/overview/),
+  [Angular](/developing/angular-tutorial/overview/) or
+  [Vue](/developing/vue-tutorial/overview/)) and get your Developer Essentials
+  badge.
 
 #### Get the tools
 
-- Visit
-  [Developing > Getting Started](https://www.carbondesignsystem.com/developing/get-started/)
-  on the Carbon website and install your framework of choice.
+- Visit [Developing > Getting Started](/developing/get-started/) on the Carbon
+  website and install your framework of choice.
 
-- Visit
-  [Developer resources](https://www.carbondesignsystem.com/developing/dev-resources/)
-  to find Carbon tools, as well as our GitHub repos and Storybooks for your
-  framework of choice.
+- Visit [Developer resources](/developing/dev-resources/) to find Carbon tools,
+  as well as our GitHub repos and Storybooks for your framework of choice.
 
 #### Connect with the team
 
-- Find [meetups](https://www.carbondesignsystem.com/whats-happening/meetups/)
-  for leveling up your skills, connecting with your peers, and getting reviews
-  on work in progress.
+- Find [meetups](/whats-happening/meetups/) for leveling up your skills,
+  connecting with your peers, and getting reviews on work in progress.
 
 - If you're confused or if you've spotted an inconsistency, reach out on our IBM
   Slack channels. At this time, the Slack channels are for IBMers only.
@@ -186,24 +172,21 @@ Here are some ways developers can begin engaging with Carbon.
   - [#carbon-web-components](https://ibm-studios.slack.com/archives/CL83LMKSA)
   - [#carbon-tutorial](https://ibm-studios.slack.com/archives/CJUGA7P6H)
 
-- Make a
-  [Github issue](https://www.carbondesignsystem.com/contributing/bugs-and-requests/)
-  when you find a bug or want to request a feature.
+- Make a [Github issue](/contributing/bugs-and-requests/) when you find a bug or
+  want to request a feature.
 
 #### Keep up with the latest
 
-- Stay up-to-date with Carbon's
-  [roadmap and releases](https://www.carbondesignsystem.com/whats-happening/releases/).
+- Stay up to date with Carbon's
+  [roadmap and releases](/whats-happening/releases/).
 
-- Keep your eye on the
-  [Work in progress](https://www.carbondesignsystem.com/whats-happening/work-in-progress/)
+- Keep your eye on the [Work in progress](/whats-happening/work-in-progress/)
   section for new resources that are currently being worked on.
 
 #### Contribute back to Carbon
 
-- [Contribute](https://www.carbondesignsystem.com/contributing/overview)
-  component and pattern enhancements or create new assets, stewarded by the
-  Carbon team.
+- [Contribute](/contributing/overview) component and pattern enhancements or
+  create new assets, stewarded by the Carbon team.
 
 - Author developer documentation for patterns and components.
 
@@ -242,7 +225,7 @@ Here are some ways marketers can begin engaging with Carbon:
   - [Supplier and Partnership Accessibility Requirements and Process](http://ibm.biz/SupplierAccessibility)
   - [Accessibility guidelines for suppliers](http://blob:https//www.ibm.com/c4c955b3-b746-c74c-86de-c852f7f1462a)
 
-  ## Product managers
+## Product managers
 
 Carbon accelerates team productivity and time to market. It improves business
 outcomes such as increased lifetime value, revenue, NPS, and decreased churn.
@@ -253,16 +236,14 @@ realms.
 
 Here are some ways product managers can begin engaging with Carbon:
 
-- Stay current with Carbon's
-  [releases and roadmap](https://www.carbondesignsystem.com/whats-happening/releases/)
-  to prioritize upgrading Carbon (new assets, upstream fixes, designer/developer
-  workflow improvements, tooling enhancements, etc.) vs. allowing time towards
-  product features and fixes.
+- Stay current with Carbon's [releases and roadmap](/whats-happening/releases/)
+  to prioritize upgrading Carbon's new assets, upstream fixes,
+  designer/developer workflow improvements, and tooling enhancements.
 
 - Provide the Carbon team with adoption and migration feedback, as well as
   measured product performance with regard to Carbon, providing a healthy
-  collaboration loop. You can find
-  [migration worksheets and other resources here](https://pages.github.ibm.com/cdai-design/dux/).
+  collaboration loop. Here are some
+  [migration worksheets and other resources](https://pages.github.ibm.com/cdai-design/dux/).
 
 ## Sales
 
@@ -271,8 +252,8 @@ together seamlessly. Suites of products built on the same foundation, that have
 the same interactions are a dream to demo.
 
 Carbon also extends
-[IBM iX's capabilities,](https://blog.adobe.com/en/publish/2019/11/04/adobe-and-ibm-ix-extend-partnership-to-help-enterprises-design-powerful-and-consistent-customer-experiences.html#gs.101gaxd)
-allowing iX customers to implement and customize Carbon, showcasing it's
+[IBM iX's capabilities](https://blog.adobe.com/en/publish/2019/11/04/adobe-and-ibm-ix-extend-partnership-to-help-enterprises-design-powerful-and-consistent-customer-experiences.html#gs.101gaxd),
+allowing iX customers to implement and customize Carbon, showcasing its
 adaptability as a white-label design system.
 
 Here are some ways people in sales can begin engaging with Carbon:
@@ -282,10 +263,14 @@ Here are some ways people in sales can begin engaging with Carbon:
 
 - Our IBM consultants are the champions of third party Carbon use. Carbon looks
   to them for the following:
+
   - Creating case studies that highlight the effective use and benefits of
     Carbon.
   - Providing information about gaps in third party capabilities, as well as
     prioritized client requests.
+
+- Stay up to date with Carbon's
+  [roadmap and releases](/whats-happening/releases/).
 
 ## Support
 
@@ -298,9 +283,11 @@ onboarding resources; learning can be leveraged across multiple spaces.
 
 Here are some ways people in support roles can begin engaging with Carbon:
 
-- Make a
-  [Github issue](https://www.carbondesignsystem.com/contributing/bugs-and-requests/)
-  to report bugs or address gaps.
+- Stay up to date with Carbon's
+  [roadmap and releases](/whats-happening/releases/).
+
+- Make a [Github issue](/contributing/bugs-and-requests/) to report bugs or
+  address gaps.
 
 - Report issues in these primary support Slack channels:
   - [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
