--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -144,7 +144,7 @@ The widths of the date inputs may vary based on the grid and layout.
 |                | width                                    | 288 / 18 | –             |
 |                | padding-top, padding-right, padding-left | 4 / 0.25 | `$spacing-02` |
 |                | padding-bottom                           | 8 / 0.5  | `$spacing-03` |
-| Claendar: icon | height, width                            | 16 / 1   | –             |
+| Calendar: icon | height, width                            | 16 / 1   | –             |
 |                | padding-right, padding-left              | 16 / 1   | `$spacing-05` |
 | Day            | height, width                            | 40 / 2.5 | –             |
 | Today: dot     | height, width                            | 4 / 0.25 | –             |
