--- a/src/pages/all-about-carbon/who-uses-carbon.mdx
+++ b/src/pages/all-about-carbon/who-uses-carbon.mdx
@@ -89,7 +89,7 @@ Here are some ways designers can begin engaging with Carbon.
   - [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
   - [#carbon-components](https://ibm-studios.slack.com/archives/C046Y0YUD)
 
-- Make a [Github issue](/contributing/bugs-and-requests/) when you find a bug or
+- Make a [GitHub issue](/contributing/bugs-and-requests/) when you find a bug or
   want to request a feature.
 
 #### Keep up with the latest
