--- a/src/pages/all-about-carbon/who-uses-carbon.mdx
+++ b/src/pages/all-about-carbon/who-uses-carbon.mdx
@@ -211,7 +211,7 @@ Here are some ways marketers can begin engaging with Carbon:
   drive IBM's portfolio of products and experiences.
 
 - The majority of marketing experiences use Carbon web components. Visit
-  [Carbon for ibm.com](https://www.ibm.com/standards/web/carbon-for-ibm-dotcom/)
+  [Carbon for IBM.com](https://www.ibm.com/standards/web/carbon-for-ibm-dotcom/)
   to ensure that these experiences are adhering to Carbon guidance.
 
 - Familiarize yourself with
