--- a/src/pages/all-about-carbon/who-uses-carbon.mdx
+++ b/src/pages/all-about-carbon/who-uses-carbon.mdx
@@ -215,7 +215,7 @@ Here are some ways marketers can begin engaging with Carbon:
   to ensure that these experiences are adhering to Carbon guidance.
 
 - Familiarize yourself with
-  [ibm.com web standards](https://www.ibm.com/standards/web/) to assess the
+  [IBM.com web standards](https://www.ibm.com/standards/web/) to assess the
   legal compliance of your experience.
 
 - Make sure all digital experiences by third parties meet IBM-A accessibility
