--- a/src/pages/all-about-carbon/who-uses-carbon.mdx
+++ b/src/pages/all-about-carbon/who-uses-carbon.mdx
@@ -286,7 +286,7 @@ Here are some ways people in support roles can begin engaging with Carbon:
 - Stay up to date with Carbon's
   [roadmap and releases](/whats-happening/releases/).
 
-- Make a [Github issue](/contributing/bugs-and-requests/) to report bugs or
+- Make a [GitHub issue](/contributing/bugs-and-requests/) to report bugs or
   address gaps.
 
 - Report issues in these primary support Slack channels:
