--- a/src/pages/all-about-carbon/who-uses-carbon.mdx
+++ b/src/pages/all-about-carbon/who-uses-carbon.mdx
@@ -172,7 +172,7 @@ Here are some ways developers can begin engaging with Carbon.
   - [#carbon-web-components](https://ibm-studios.slack.com/archives/CL83LMKSA)
   - [#carbon-tutorial](https://ibm-studios.slack.com/archives/CJUGA7P6H)
 
-- Make a [Github issue](/contributing/bugs-and-requests/) when you find a bug or
+- Make a [GitHub issue](/contributing/bugs-and-requests/) when you find a bug or
   want to request a feature.
 
 #### Keep up with the latest
