--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -14,8 +14,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 | Class                 | Property   | Color token                 |
 | --------------------- | ---------- | --------------------------- |
-| `.bx--select-input`   | background | `$background`               |
-| `.bx--select--light`  | background | `$background: inline theme` |
+| `.bx--select-input`   | background | `$field`                    |
 | `.bx--select--inline` | background | transparent                 |
 | `.bx--label`          | text color | `$text-primary`             |
 | `.bx--select-input`   | text color | `$text-primary`             |
@@ -37,7 +36,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | `.bx--select-input:focus`         | border     | `$focus`               |
 | `.bx--select-input[data-invalid]` | border     | `$support-error`       |
 | `.bx--form-requirement`           | text color | `$support-error`       |
-| `.bx--select-input:disabled`      | background | `$background-disabled` |
+| `.bx--select-input:disabled`      | background | `$field-disabled`      |
 | `.bx--select-input:disabled`      | text color | `$text-disabled`       |
 
 **Open:** Style determined by browser
