--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -20,7 +20,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                            | Property   | Color token    |
 | -------------------------------- | ---------- | -------------- |
-| `.bx--accordion__heading:hover`  | background | `$field-hover`    |
+| `.bx--accordion__heading:hover`  | background | `$background-hover`    |
 | `.bx--accordion__title:focus`    | border     | `$focus`       |
 | `.bx--accordion__title:disabled` | background | `$text-disabled` |
 | `.bx--accordion__arrow:disabled` | fill       | `$icon-disabled` |
