--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -18,7 +18,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                    | border-bottom    | `$border-strong`             |
 | Chevron icon       | svg              | `$icon-primary`              |
 | Menu option        | text-color       | `$text-secondary`            |
-|                    | background-color | `$field`                     |
+|                    | background-color | `$layer`                     |
 |                    | border-top       | `$border-subtle`             |
 | Menu               | box-shadow       | `0 2px 6px 0 rgba(0,0,0,.2)` |
 | Checkbox icon      | background-color | `$icon-primary`              |
@@ -42,7 +42,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | State          | Element         | Property         | Color token           |
 | -------------- | --------------- | ---------------- | --------------------- |
 | Focus          | Field           | border           | `$focus`              |
-| Hover          | Field           | background-color | `$layer-hover`        |
+| Hover          | Field           | background-color | `$field-hover`        |
 |                | Menu option     | background-color | `$layer-hover`        |
 |                | Menu option     | text-color       | `$text-primary`       |
 | Invalid        | Error icon      | svg              | `$support-error`      |
@@ -50,7 +50,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                | Error message   | text-color       | `$text-error`         |
 | Warning        | Warning message | text-color       | `$text-primary`       |
 |                | Warning icon    | svg              | `$support-warning`    |
-| Active         | Menu option     | background-color | `$layer-selected`     |
+| Active         | Menu option     | background-color | `$layer-active`       |
 | Selected       | Menu option     | background-color | `$layer-selected`     |
 |                | Menu option     | checkmark        | `$icon-primary`       |
 | Multi-selected | Tag             | background-color | `$background-inverse` |
@@ -88,12 +88,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |          | Field text    | text-color       | `$text-primary`        |
 |          | Chevron icon  | svg              | `$icon-primary`        |
 |          | Menu option   | text-color       | `$text-secondary`      |
-|          | Menu option   | background-color | `$field`               |
-| Hover    | Field         | background-color | `$background-hover`    |
-|          | Menu option   | background-color | `$background-hover`    |
+|          | Menu option   | background-color | `$layer`               |
+| Hover    | Field         | background-color | `$field-hover`         |
+|          | Menu option   | background-color | `$layer-hover`         |
 |          | Menu option   | text-color       | `$text-primary`        |
-| Active   | Menu option   | background-color | `$background-selected` |
-| Selected | Menu option   | background-color | `$background-selected` |
+| Active   | Menu option   | background-color | `$layer-active`        |
+| Selected | Menu option   | background-color | `$layer-selected`      |
 |          | Menu option   | checkmark        | `$icon-primary`        |
 | Invalid  | Field         | border           | `$support-error`       |
 |          | Error message | text-color       | `$text-error`          |
