docs: v11 color token updates for progress indicator component (#2329)
* docs: v11 color token updates for progress indicator component

This PR updates the color tokens on the style tab for the progress indicator component.

* Update style.mdx

Co-authored-by: Anna Gonzales <anna.gonzales3@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/progress-indicator/style.mdx
+++ b/src/pages/components/progress-indicator/style.mdx
@@ -14,22 +14,22 @@ checkmark. The current step the user is on is indicated by a filled circle.
 Steps the user has not encountered yet, or future steps, are indicated by an
 outlined circle.
 
-| Class                                                       | Property         | Color token       |
-| ----------------------------------------------------------- | ---------------- | ----------------- |
-| `.bx--progress-step--complete svg`                          | fill             | `$interactive-04` |
-| `.bx--progress-step--incomplete svg`                        | fill             | `$interactive-04` |
-| `.bx--progress-step--current` <br/> `.bx--progress-line`    | background-color | `$interactive-04` |
-| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$ui-03`          |
-| `.bx--progress-label`                                       | text color       | `$text-01`        |
-| `.bx--progress-optional`                                    | text color       | `$text-02`        |
+| Class                                                       | Property         | Color token           |
+| ----------------------------------------------------------- | ---------------- | --------------------- |
+| `.bx--progress-step--complete svg`                          | fill             | `$interactive`        |
+| `.bx--progress-step--incomplete svg`                        | fill             | `$interactive`        |
+| `.bx--progress-step--current` <br/> `.bx--progress-line`    | background-color | `$border-interactive` |
+| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$border-subtle`      |
+| `.bx--progress-label`                                       | text color       | `$text-primary`       |
+| `.bx--progress-optional`                                    | text color       | `$text-secondary`     |
 
 ### Interactive states
 
-| Class                       | Property   | Color token   |
-| --------------------------- | ---------- | ------------- |
-| `.bx--progress-step:focus`  | border     | `$focus`      |
-| `.bx--progress-label:hover` | text color | `$link-01`    |
-| `.bx--progress__warning`    | fill       | `$support-01` |
+| Class                       | Property   | Color token      |
+| --------------------------- | ---------- | ---------------- |
+| `.bx--progress-step:focus`  | border     | `$focus`         |
+| `.bx--progress-label:hover` | text color | `$link-primary`  |
+| `.bx--progress__warning`    | fill       | `$support-error` |
 
 <div className="image--fixed">
 
