--- a/src/pages/components/notification/style.mdx
+++ b/src/pages/components/notification/style.mdx
@@ -14,21 +14,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <Caption>Low contrast notifications in the White theme</Caption>
 
-| Variant             | Element                                                           | Property   | Color token |
-| ------------------- | ----------------------------------------------------------------- | ---------- | ----------- |
-| Inline notification | Title                                                             | text color | `$text-primary`  |
-|                     | Subtitle                                                          | text color | `$text-primary`  |
-|                     | Close button                                                      | fill       | `$icon-primary`  |
-|                     | Action button                                                     | text color | `$link-primary`  |
-| Toast notification  | Title                                                             | text color | `$text-primary`  |
-|                     | Subtitle                                                          | text color | `$text-primary`  |
-|                     | Close button                                                      | fill       | `$icon-primary`  |
-|                     | Action button                                                     | text color | `$link-primary`  |
-
-<br />
-
-| Status           | Property                | Color token                            |
-| ---------------- | ----------------------- | ---------------------------------- |
+| Element          | Property                | Color token |
+| ---------------- | ----------------------- | ----------- |
+| Title            | text color              | `$text-primary`  |
+| Subtitle         | text color              | `$text-primary`  |
+| Close button     | fill                    | `$icon-primary`  |
+| Action button    | text color              | `$link-primary`  |
 | Error            | background-color        | `$notification-error-background-color` |
 |                  | border-left             | `$support-error`                          |
 |                  | svg                     | `$support-error`                          |
@@ -51,23 +42,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <br />
 
-| Variant             | Element                                                           | Property   | Color token |
-| --------------------------------------------------------------------------------------- | ---------- | ----------- |
-| Inline notification | Title                                                             | text color | `$text-inverse`  |
-|                     | Subtitle                                                          | text color | `$text-inverse`  |
-|                     | Close button                                                      | fill       | `$icon-inverse`  |
-|                     | Action button                                                     | text color | `$link-inverse`  |
-|                     | Background                                                        | background-color | `$background-inverse`  |
-| Toast notification  | Title                                                             | text color | `$text-inverse`  |
-|                     | Subtitle                                                          | text color | `$text-inverse`  |
-|                     | Close button                                                      | fill       | `$icon-inverse`  |
-|                     | Action button                                                     | text color | `$link-inverse`  |
-|                     | Background                                                        | background-color | `$background-inverse`  |
-
-<br />
-
-| Status                | Property    | Color token           |
-| --------------------- | ----------- | --------------------- |
+| Element               | Property   | Color token |
+| --------------------- | ---------- | ----------- |
+| Title                 | text color | `$text-inverse`  |
+| Subtitle              | text color | `$text-inverse`  |
+| Close button          | fill       | `$icon-inverse`  |
+| Action button         | text color | `$link-inverse`  |
+| Background            | background-color | `$background-inverse`  |
 | Error                 | border-left | `$support-error-inverse` |
 |                       | svg         | `$support-error-inverse` |
 | Success               | border-left | `$support-success-inverse` |
