Copy edit: Added “be” to “they can be used”
Added “be” to “they can be used” in the “Overview” paragraph

--- a/src/pages/all-about-carbon/the-carbon-ecosystem.mdx
+++ b/src/pages/all-about-carbon/the-carbon-ecosystem.mdx
@@ -27,7 +27,7 @@ assets and guidance but Carbon is more than one website.
 
 At its core, Carbon has universal assets–elements, components, patterns, and
 code–and guidance for how to design and build with them. These assets are
-considered universal or fundamental in nature, which means they can used as a
+considered universal or fundamental in nature, which means they can be used as a
 base for the widest variety of situations, and extended or adapted for the
 specific business use cases.
 
