added-size-title

--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -69,6 +69,10 @@ should be three words or less.
 | Field                      | border-bottom               | 1px      | –             |
 | Field: focus               | border                      | 2px      | –             |
 
+<br />
+
+<Title> Sizes </Title>
+
 | Size                       | Element | Property          | px / rem |
 | -------------------------- | ------- | ----------------- | -------- |
 | Small                      | Field   | height            | 32 / 2   |
