--- a/src/pages/components/tile/style.mdx
+++ b/src/pages/components/tile/style.mdx
@@ -10,21 +10,21 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                        | Property         | Color token |
 | ---------------------------- | ---------------- | ----------- |
-| `.bx--tile`                  | background-color | `$ui-01`    |
-| `.bx--tile:focus`            | border           | `$focus`    |
-| `.bx--tile:hover`            | background-color | `$hover-ui` |
-| `.bx--tile--is-selected`     | border           | `$ui-05`    |
-| `.bx--tile__chevron`         | svg              | `$icon-01`  |
-| `.bx--tile__checkmark`       | svg              | `$icon-01`  |
-| `.bx--tile__checkmark:hover` | svg              | `$icon-02`  |
+| Tile                         | background-color | `$layer`    |
+| Tile: focus                  | border           | `$focus`    |
+| Tile: hover                  | background-color | `$layer-hover` |
+| Tile: selected               | border           | `$border-inverse`    |
+| Chevron icon                 | svg              | `$icon-primary`  |
+| Checkmark icon               | svg              | `$icon-primary`  |
+| Checkmark: hover             | svg              | `$icon-secondary`  |
 
 ## Structure
 
 | Class       | Property          | px / rem | Spacing token |
 | ----------- | ----------------- | -------- | ------------- |
-| `.bx--tile` | min-height        | 64 / 4   | –             |
-| `.bx--tile` | min-width         | 128 / 8  | –             |
-| `.bx--tile` | padding (minimum) | 16 / 1   | `$spacing-05` |
+| Tile        | min-height        | 64 / 4   | –             |
+|             | min-width         | 128 / 8  | –             |
+|             | padding (minimum) | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
