--- a/src/pages/developing/vue-tutorial/step-4.mdx
+++ b/src/pages/developing/vue-tutorial/step-4.mdx
@@ -286,9 +286,7 @@ While we're here next to the component imports, let's import the icons that
 we'll need as well.
 
 ```javascript path=src/views/LandingPage/LandingPage.vue
-import Globe32 from '@carbon/icons-vue/lib/globe/32';
-import PersonFavorite32 from '@carbon/icons-vue/lib/person--favorite/32';
-import Application32 from '@carbon/icons-vue/lib/application/32';
+import { Globe32, PersonFavorite32, Application32 } from '@carbon/icons-vue';
 ```
 
 <InlineNotification>
