--- a/src/pages/developing/vue-tutorial/step-1.mdx
+++ b/src/pages/developing/vue-tutorial/step-1.mdx
@@ -156,7 +156,7 @@ using the Vue CLI. These include:
 - `@vue/cli-plugin-babel`: To ensure we produce well supported code.
 - `@vue/cli-plugin-eslint`: To allow us to catch potential errors.
 - `@vue/cli-plugin-unit-jest`: To allow us to unit test our code.
-- `node-sass`: To allow us to use the sass css precompiler.
+- `sass-loader`: To allow us to use the sass css precompiler.
 
 NOTE: We could have installed these separately but using the CLI to set this up
 for us ensures a good base config for these dependencies.
@@ -422,9 +422,7 @@ each individual icon we will use.
 <!-- prettier-ignore-start -->
 ```javascript path=src/components/TutorialHeader/TutorialHeader.vue
 <script>
-import Notification20 from "@carbon/icons-vue/es/notification/20";
-import UserAvatar20 from "@carbon/icons-vue/es/user--avatar/20";
-import AppSwitcher20 from "@carbon/icons-vue/es/app-switcher/20";
+import { Notification20, UserAvatar20, AppSwitcher20 } from '@carbon/icons-vue';
 
 export default {
   name: "TutorialHeader",
