update: structure images

--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -29,23 +29,23 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| State    | Element        | Property                                                                                       | Color token               |
-| -------- | -------------- | ---------------------------------------------------------------------------------------------- | ------------------------- |
-| Hover    | Drop container | border                                                                                         | `$focus`                  |
-|          | Drop text      | text-color                                                                                     | `link-primary`, underline |
-| Focus    | File           | border                                                                                         | `$focus`                  |
-|          | Drop container | border                                                                                         | `$focus`                  |
-| Loading  | Loader         | See [inline loading](https://www.carbondesignsystem.com/components/inline-loading/style#color) |                           |
-| Uploaded | Checkmark icon | svg                                                                                            | `$interactive`            |
-| Invalid  | File           | border                                                                                         | `$support-error`          |
-|          | Error title    | text-color                                                                                     | `$text-primary`           |
-|          | Error message  | text-color                                                                                     | `$text-error`             |
-|          | Warning icon   | svg                                                                                            | `$support-error`          |
-|          | Divider        | border-top                                                                                     | `$border-subtle`          |
-| Disabled | Label          | text-color                                                                                     | `$text-disabled`          |
-|          | Description    | text-color                                                                                     | `$text-disabled`          |
-|          | Drop text      | text-color                                                                                     | `$text-disabled`          |
-|          | Drop container | border                                                                                         | `$button-disabled`        |
+| State    | Element        | Property                                                                                       | Color token        |
+| -------- | -------------- | ---------------------------------------------------------------------------------------------- | ------------------ |
+| Hover    | Drop container | border                                                                                         | `$focus`           |
+|          | Drop text      | text-color                                                                                     | `link-primary`     |
+| Focus    | File           | border                                                                                         | `$focus`           |
+|          | Drop container | border                                                                                         | `$focus`           |
+| Loading  | Loader         | See [inline loading](https://www.carbondesignsystem.com/components/inline-loading/style#color) |                    |
+| Uploaded | Checkmark icon | svg                                                                                            | `$interactive`     |
+| Invalid  | File           | border                                                                                         | `$support-error`   |
+|          | Error title    | text-color                                                                                     | `$text-primary`    |
+|          | Error message  | text-color                                                                                     | `$text-error`      |
+|          | Warning icon   | svg                                                                                            | `$support-error`   |
+|          | Divider        | border-top                                                                                     | `$border-subtle`   |
+| Disabled | Label          | text-color                                                                                     | `$text-disabled`   |
+|          | Description    | text-color                                                                                     | `$text-disabled`   |
+|          | Drop text      | text-color                                                                                     | `$text-disabled`   |
+|          | Drop container | border                                                                                         | `$button-disabled` |
 
 <Row>
 <Column colLg={8}>
@@ -77,7 +77,7 @@ with only the first letter of the first word in the sentence capitalized.
 | Label         | 14 / 0.875           | Semi-bold / 600 | `$productive-heading-01` |
 | Description   | 14 / 0.875           | Regular / 400   | `$body-short-01`         |
 | File name     | 14 / 0.875           | Regular / 400   | `$body-short-01`         |
-| Error message | 12 / 0.75            | Regular / 400   | `label-01`               |
+| Error message | 12 / 0.75            | Regular / 400   | `$label-01`              |
 | Drop text     | 14 / 0.875           | Regular / 400   | `$body-short-01`         |
 
 ## Structure
@@ -115,7 +115,7 @@ design.
   Structure and spacing measurements for drag and drop file uploader | px / rem
 </Caption>
 
-## Sizes
+### Sizes
 
 The file and button heights should always match.
 
