--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -128,10 +128,12 @@ The file and button heights should always match.
 |         | height   | Medium | 40 / 2.5 | –             |
 |         | height   | Large  | 48 / 3   | –             |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
 ![File and button sizes](images/file-uploader-style-6.png)
 
-</div>
+</Column>
+</Row>
 
 <Caption>File and button sizes | px / rem</Caption>
