--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -116,7 +116,9 @@ columns. Tables require three or more columns.
 
 ### Rows
 
-Row sizes are customizable. The column header row should always match the row size of the table. Tall row heights are only recommended if your data is expected to have 2 lines of content in a single row.
+Row sizes are customizable. The column header row should always match the row
+size of the table. Tall row heights are only recommended if your data is
+expected to have 2 lines of content in a single row.
 
 | Element | Property | Size    | px / rem |
 | ------- | -------- | ------- | -------- |
@@ -162,12 +164,12 @@ batch actions, overall table menu, and/or table filter.
 The default 48px toolbar is paired with the tall and default row sizes. The
 small toolbar is paired with the short and compact row sizes.
 
-| Element                      | Property                  | px / rem | Spacing token |
-| ---------------------------- | ------------------------- | -------- | ------------- |
-| Toolbar: large               | height, width             | 48 / 3   | –             |
-|                              | margin-top, margin-bottom | 16 / 1   | `$spacing-05` |        
-| Toolbar: small               | height, width             | 32 / 2   | –             |
-|                              | margin-top, margin-bottom | 8 / 0.5  | `$spacing-03` |
+| Element        | Property                  | px / rem | Spacing token |
+| -------------- | ------------------------- | -------- | ------------- |
+| Toolbar: large | height, width             | 48 / 3   | –             |
+|                | margin-top, margin-bottom | 16 / 1   | `$spacing-05` |
+| Toolbar: small | height, width             | 32 / 2   | –             |
+|                | margin-top, margin-bottom | 8 / 0.5  | `$spacing-03` |
 
 <div className="image--fixed">
 
