--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -8,8 +8,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-Inputs come in two different colors. The default input color is `$field` and
-is used on `$background` and `$overlay` page backgrounds. 
+Inputs come in two different colors. The default input color is `$field` and is
+used on `$background` and `$overlay` page backgrounds.
 
 | Class                              | Property         | Color token       |
 | ---------------------------------- | ---------------- | ----------------- |
