--- a/src/pages/developing/angular-tutorial/step-5.mdx
+++ b/src/pages/developing/angular-tutorial/step-5.mdx
@@ -152,10 +152,10 @@ first.
 npm run build
 ```
 
-Looking at `package.json`, you'll find `ng build`. This
-builds the app for production to the `dist` folder. It bundles Angular in
-production mode and optimizes the build for the best performance. It even goes
-so far to minify files and include hashes in filenames for caching.
+Looking at `package.json`, you'll find `ng build`. This builds the app for
+production to the `dist` folder. It bundles Angular in production mode and
+optimizes the build for the best performance. It even goes so far to minify
+files and include hashes in filenames for caching.
 
 As a lot of this may seem like magic since the build configuration came from
 Create React App, go ahead and check out their
