update: color token and element column

--- a/src/pages/components/list/style.mdx
+++ b/src/pages/components/list/style.mdx
@@ -7,9 +7,9 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Attribute         | Property | Color token |
-| ----------------- | -------- | ----------- |
-| `.bx--list__item` | color    | `$text-01`  |
+| Attribute | Property   | Color token     |
+| --------- | ---------- | --------------- |
+| Item      | text-color | `$text-primary` |
 
 <Row>
 <Column colLg={8}>
@@ -27,12 +27,12 @@ List items should use sentence case, that is, only the first word and any proper
 nouns are capitalized. In IBM product, use the 14px options below. For IBM.com,
 use the larger expressive 16px options.
 
-| Class                   | Font-size (px/rem) | Font-weight   | Type token      |
-| ----------------------- | ------------------ | ------------- | --------------- |
-| `.bx--list__item`       | 14 / 0.875         | Regular / 400 | `$body-long-01` |
-| `.bx--list--nested`     | 14 / 0.875         | Regular / 400 | `$body-long-01` |
-| `.bx--list--lg--item`   | 16 / 1             | Regular / 400 | `$body-long-02` |
-| `.bx--list--lg--nested` | 16 / 1             | Regular / 400 | `$body-long-02` |
+| Element                   | Font-size (px / rem) | Font-weight   | Type token      |
+| ------------------------- | -------------------- | ------------- | --------------- |
+| Item                      | 14 / 0.875           | Regular / 400 | `$body-long-01` |
+| Item: nested              | 14 / 0.875           | Regular / 400 | `$body-long-01` |
+| Item (expressive)         | 16 / 1               | Regular / 400 | `$body-long-02` |
+| Item: nested (expressive) | 16 / 1               | Regular / 400 | `$body-long-02` |
 
 ## Structure
 
