update: size column order

--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -119,14 +119,14 @@ design.
 
 The file and button heights should always match.
 
-| Element | Property | Size   | px / rem | Spacing token |
-| ------- | -------- | ------ | -------- | ------------- |
-| File    | height   | Small  | 32 / 2   | –             |
-|         | height   | Medium | 40 / 2.5 | –             |
-|         | height   | Large  | 48 / 3   | –             |
-| Button  | height   | Small  | 32 / 2   | –             |
-|         | height   | Medium | 40 / 2.5 | –             |
-|         | height   | Large  | 48 / 3   | –             |
+| Element | Size   | Property | px / rem |
+| ------- | ------ | -------- | -------- |
+| File    | Small  | height   | 32 / 2   |
+|         | Medium | height   | 40 / 2.5 | 
+|         | Large  | height   | 48 / 3   |
+| Button  | Small  | height   | 32 / 2   |
+|         | Medium | height   | 40 / 2.5 |
+|         | Large  | height   | 48 / 3   |
 
 <Row>
 <Column colLg={8}>
