update: column header

--- a/src/pages/components/list/style.mdx
+++ b/src/pages/components/list/style.mdx
@@ -7,9 +7,9 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Attribute | Property   | Color token     |
-| --------- | ---------- | --------------- |
-| Item      | text-color | `$text-primary` |
+| Element | Property   | Color token     |
+| ------- | ---------- | --------------- |
+| Item    | text-color | `$text-primary` |
 
 <Row>
 <Column colLg={8}>
